--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # 限制函数的连续执行，防止按钮重复点击用的 https://github.com/mhrst/just_throttle_it
+  just_throttle_it: ^2.1.0
+
+  lib_theme:
+    path: ../lib_theme
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
