fix: 修复了package里面的iconfont生成脚本

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
+  fonts:
+    - family: iconfont
+      fonts:
+        - asset: assets/fonts/iconfont.ttf
+
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
