fix: 修复ios原生输入框强解Option类型可能导致的闪退

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   native_text_field:
     git:
       url: https://github.com/FBSocial/native_text_field.git
-      ref: 5a1286a7e0588da9a24a110eddd90ceeb4eb62cb
+      ref: 2.0.3
 
   lib_theme:
     path: ../lib_theme
