--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     path: ../lib_extension
   lib_image:
     path: ../lib_image
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +60,8 @@ flutter:
       fonts:
         - asset: assets/fonts/iconfont.ttf
 
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/svg/
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
