--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   sliding_sheet: ^0.5.2
   video_player: ^2.5.1
   simple_shadow: ^0.3.1
+  device_info_plus: ^4.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
