--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -43,6 +43,11 @@ dependency_overrides:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_quill:
+    git:
+      url: https://github.com/FBSocial/fb_flutter_quill.git
+      ref: e5c7ffb7d68ee5c6fede13e43b541acd4b6528d6
+  device_info_plus: ^4.0.0
 
 dev_dependencies:
   flutter_test:
