--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,12 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
 
+dependency_overrides:
+  flutter_quill:
+    git:
+      url: https://github.com/FBSocial/fb_flutter_quill.git
+      ref: e5c7ffb7d68ee5c6fede13e43b541acd4b6528d6
+  device_info_plus: ^4.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
