--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
 
 dependency_overrides:
   get: ^4.6.5
-
+  json_serializable: ^6.6.1
+  analyzer: ^5.10.0
+  sqflite: ^2.2.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -48,6 +50,7 @@ dependency_overrides:
       url: https://github.com/FBSocial/fb_flutter_quill.git
       ref: e5c7ffb7d68ee5c6fede13e43b541acd4b6528d6
   device_info_plus: ^4.0.0
+  i18n_extension: ^8.0.0
 
 dev_dependencies:
   flutter_test:
