--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,6 @@ dependencies:
 
   # 限制函数的连续执行，防止按钮重复点击用的 https://github.com/mhrst/just_throttle_it
   just_throttle_it: ^2.1.0
-  # 用于处理IOS、Android、web三个平台的SVG资源 https://github.com/peiffer-innovations/websafe_svg
-  websafe_svg: ^2.1.0
   # 动画 https://github.com/flutter/packages/tree/master/packages/animations
   animations: ^2.0.2
   # 矢量动画库：
@@ -48,7 +46,7 @@ dependencies:
     path: ../lib_utils
   service:
     path: ../../module/module_service
-  flutter_svg: ^1.0.3
+  flutter_svg: ^2.0.5
   sliding_sheet:
     git:
       url: https://github.com/FBSocial/sliding_sheet.git
@@ -62,11 +60,14 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 dependency_overrides:
+  i18n_extension: ^8.0.0
   flutter_quill:
     git:
       url: https://github.com/FBSocial/fb_flutter_quill.git
       ref: e5c7ffb7d68ee5c6fede13e43b541acd4b6528d6
   device_info_plus: ^4.0.0
+  analyzer: ^5.10.0
+  flutter_cache_manager: ^3.3.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
