--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependency_overrides:
   device_info_plus: ^4.0.0
   analyzer: ^5.10.0
   flutter_cache_manager: ^3.3.0
+  sqflite: ^2.2.7
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
