--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -48,7 +48,7 @@ dependency_overrides:
   flutter_quill:
     git:
       url: https://github.com/FBSocial/fb_flutter_quill.git
-      ref: e5c7ffb7d68ee5c6fede13e43b541acd4b6528d6
+      ref: 6.3.5+5
   device_info_plus: ^4.0.0
   i18n_extension: ^8.0.0
 
