--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   simple_shadow: ^0.3.1
   device_info_plus: ^4.0.0
   build_runner: ^2.3.3
+  lib_fb_utils:
+    path: ../lib_fb_utils
 dev_dependencies:
   flutter_test:
     sdk: flutter
