--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -45,6 +45,7 @@ dependency_overrides:
   json_serializable: ^6.6.1
   analyzer: ^5.10.0
   sqflite: ^2.2.7
+  audio_video_progress_bar: ^1.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
