--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -48,7 +48,12 @@ dependency_overrides:
   flutter_quill:
     git:
       url: https://github.com/FBSocial/fb_flutter_quill.git
-      ref: 6.3.5+12
+      ref: 6.3.5+13
+  image_picker:
+    git:
+      url: https://github.com/FBSocial/packages.git
+      path: packages/image_picker/image_picker/
+      ref: image_picker_fix_1.0.1+1
   device_info_plus: ^4.0.0
   i18n_extension: ^8.0.0
 
